fixed the toggle button position on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -170,7 +170,7 @@ input[type='submit']:hover {
     .flag-toggle {
         position: absolute;
         left: 35%;
-        bottom: 25%;
+        bottom: 10%;
     } 
     .flex {
 
